[tool.poetry]
name = "CRY"
version = '0.0.1'
description = ""
authors = ["Pierre-Yves Langlois"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
plumbum = "*"
ansible = "*"

[tool.poetry.scripts]
cry = "cry.cli:main"
